# CppMicroservicesExample

./: CMakeLists.txt  README.md  main.cpp
clock/src/: CMakeLists.txt  ServiceTime.cpp  ServiceTime.h
clockConsumer/resources/: manifest.json
clockConsumer/src/: ConsumerActivator.cpp
clockService/resources/: manifest.json
consumer/src/: CMakeLists.txt  ConsumerActivator.cpp
driver/src/: CMakeLists.txt  main.cpp
fileWatcherConsumer/resources/: manifest.json
fileWatcherConsumer/src/: CMakeLists.txt  FileWatcherConsumerActivator.cpp
fileWatcherService/resources/: manifest.json
fileWatcherService/src/: CMakeLists.txt  FileWatcher.h  FileWatcherActivator.cpp
mms/resources/: manifest.json
mms/src/: Activator.cpp  CMakeLists.txt  FileWatcher.h  MmsActivator.cpp
service_time/: ServiceTime.cpp  ServiceTime.h
service_time_consumer/: ServiceTimeConsumer.cpp  manifest.json
service_time_systemclock/: ServiceTimeImpl.cpp  manifest.json
shared/src/: IServiceFileWatcher.h  IServiceTime.h
src/: CMakeLists.txt
src/driver/: CMakeLists.txt  main.cpp
src/service/: CMakeLists.txt
src/service/serializer/: Activator.cpp  CMakeLists.txt  ISerializerService.cpp  ISerializerService.h
src/service/serializer/resources/: manifest.json
